<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        app:srcCompat="@drawable/default_avatar" />

    <TextView
        android:id="@+id/profile_DisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/display_name"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_DisplayName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/current_user_status"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/profile_totalFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/total_friends"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/profile_send_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_totalFriends"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/send_friend_request" />
    <Button
        android:id="@+id/profile_decline_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_send_request_btn"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/decline_friend_request" />
</RelativeLayout>